fix(launcher): resolve gdcc jar at runtime
- Scan launcher directory for a single gdcc-*.*.*.jar instead of using a build-time jar name.
- Add required JVM native access and gdparser resource directory options.
- Extract jar search into a dedicated Zig module and exclude Zig caches from Gradle inputs.
- Document the launcher jar resolution contract.